deployement/k8s/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: rtwcr1.azurecr.io/services/analytics-service
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3004
    targetPort: 3004
  selector:
    app: analytics-service
