deployement/k8s/frontend-adac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-adac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-adac
  template:
    metadata:
      labels:
        app: frontend-adac
    spec:
      containers:
      - name: frontend-adac
        image: rtwcr1.azurecr.io/frontend
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-adac
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 4000
    targetPort: 3000
  selector:
    app: frontend-adac
