deployement/k8s/fusionauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      containers:
        - name: fusionauth
          image: fusionauth/fusionauth-app
          ports: 
          - containerPort: 9011
---
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
spec:
  type: LoadBalancer
  selector:
    app: fusionauth
  ports:
    - protocol: TCP
      port: 9011
      targetPort: 9011
