deployement/k8s/heatmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heatmap-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heatmap-service
  template:
    metadata:
      labels:
        app: heatmap-service
    spec:
      containers:
      - name: heatmap-service
        image: rtwcr1.azurecr.io/services/heatmap-service
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: heatmap-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3003
    targetPort: 3003
  selector:
    app: heatmap-service
