deployement/k8s/pin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pin-service
  template:
    metadata:
      labels:
        app: pin-service
    spec:
      containers:
      - name: pin-service
        image: rtwcr1.azurecr.io/services/pin-service
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: pin-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3002
    targetPort: 3002
  selector:
    app: pin-service
